# invoice

./: .gitignore  Readme.txt
app/: entrypoint.sh  pyproject.toml  serve.py
docker/: build_script.sh  deploy_script.sh  docker-compose-deploy.yml
docker/Dockerfile/: .env  docker-compose.yml  ray.Dockerfile
