[tool.poetry]
name = "Artin Face Detection"
version = "0.1.1"
description = ""
authors = [
    "Hadi Dodangeh <dodangeh.hadi@gmail.com>",
]

[tool.poetry.dependencies]
python = "~3.10.12"
langchain = "~0.0.335"
qdrant-client = "~1.6.9"
pandas = "^1.5.3"
cohere = "~4.34"
pydantic = "~1.10.13"
openai = "~1.3.5"
pdfplumber = "~0.10.3"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.8"]
build-backend = "poetry.core.masonry.api"
